--- a/packages/reactui/src/assets/styles/base.css
+++ b/packages/reactui/src/assets/styles/base.css
@@ -36,11 +36,6 @@ small {
   margin-top:var(--theme-spacing-dense);
   margin-bottom:var(--theme-spacing-dense);
 }
-
-/*
-  Ripple for Button and Link
-*/
-
 .FSC_ripple {
   position: relative;
   overflow: hidden;
@@ -62,11 +57,12 @@ small {
   transform: scaleX(1);
   transform-origin: 0 50%;
   opacity: 0;
-  transition: transform 0s, opacity 0s; /* No initial transition */
+  transition: transform 0s, opacity 0s;
 }
 
 .FSC_ripple.FSC_isRippling::after {
   transform: scaleX(0);
   opacity: 0.5;
-  transition: transform 0.5s, opacity 1s; /* Transition on ripple */
-}
+  transition: transform 0.5s, opacity 1s; 
+} 
+
